Bug 1477090 - Only instantiate modules when it's safe to run script r=baku